# task_reminder

./: Cargo.toml  README.md  before.sh  pyproject.toml  run.sh
python/: email_sender.py  run.py
src/: choice.rs  constants.rs  data.json  file.rs  input.rs  lib.rs
src/file/: add.rs  search.rs
src/input/: user.rs
src/input/user/: task.rs
src/input/user/task/: date.rs
