[package]
name = "task_reminder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "task_reminder"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.21.1"
colored = "2.1.0"
regex = "1.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clearscreen = "2.0.1"